syntax = "proto3";

package com.example.grpcapi.reqrep.pass;

import "com/example/commonmodel/pass.proto";

option java_multiple_files = true;

message GetAllTransferredPassesRequest {

}

message GetAllTransferredPassesResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    repeated commonmodel.Pass passes = 1;
  }

  message Failure {
    string message = 100;
  }
}
