syntax = "proto3";

package com.example.internal.input.reqreply;

import "com/example/commonmodel/pass.proto";

option java_multiple_files = true;

message TransferredPassMessage {
  string previous_pass_owner_id = 1;
  commonmodel.Pass pass = 2;
  string pass_id = 3;
}
